[package]
name = "commitaura"
version = "1.0.2"
edition = "2021"
description = "Intelligent Git commit assistant with README integration"
license = "MIT"
authors = ["Alex Figueroa <alexfigueroa.solutions@gmail.com>"]
repository = "https://github.com/alexfigueroa-solutions/commitaura"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
pulldown-cmark = "0.12.1"
console = "0.15"
dialoguer = "0.11.0"
indicatif = "0.17"
log = "0.4"
openai_api_rust = "0.1.8"
thiserror = "1.0"
dotenv = "0.15"
env_logger = "0.11.5"
markdown = "0.3"

[dev-dependencies]
tempfile = "3.2"
